# DTC-GNN

./: .gitignore  LICENSE  README.md  pyproject.toml
dtc_gnn/: error_models.py  utlis.py
dtc_gnn/data_generation/: graph_data_generator.py
dtc_gnn/data_management/: data_modules.py  data_transforms.py  graph_utils.py  label_encoder.py
dtc_gnn/data_management/modules/: graph_data_module.py  graph_dataset.py
dtc_gnn/data_management/transforms/: graph_syndrome.py  graph_utils.py
dtc_gnn/deep_decoding/: lightning_module.py  loss_functions.py
dtc_gnn/deep_decoding/models/: EGATConvGNN.py  GraphConvGNN.py
dtc_gnn/simulation/: decoding_simulator.py
dtc_gnn/simulation/decoders/: base.py  gnn_decoder.py  mwpm_decoder.py
static_files/config_files/: data_generation_config.yaml  decoder_simulation_config.yaml  decoder_training_config.yaml
static_files/config_files/gnn_model/: egat_conv_gnn.yaml  graph_conv_gnn.yaml
static_files/hydra_runs/: data_generation.py  decoder_training.py
static_files/scripts_runs/: data_generation.py  decoder_simulation.py  decoder_training.py  path_init.py
